Database funcional + Monstruos

--- a/app/src/main/res/layout/activity_escribe.xml
+++ b/app/src/main/res/layout/activity_escribe.xml
@@ -17,9 +17,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/mm"
-        android:text="ESCRIU"
+        android:text="@string/write"
         android:textColor="@color/colorSecundary"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,6 @@
         android:layout_marginRight="20dp"
         android:fontFamily="@font/ml"
         android:text="@string/write_description"
-        android:textSize="18sp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,11 +43,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         android:background="@xml/textview_border"
         android:fontFamily="@font/mm"
-        android:gravity="top|left"
+        android:gravity="top|start"
         android:hint="@string/textHint"
         android:inputType="textMultiLine"
         android:minHeight="150dp"
