--- a/app/src/main/res/layout/activity_respiracio.xml
+++ b/app/src/main/res/layout/activity_respiracio.xml
@@ -22,9 +22,9 @@
         android:fontFamily="@font/mm"
         android:text="@string/squareBreathe"
         android:textColor="@color/colorSecundary"
+        android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
