--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -2,8 +2,6 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center">
 
@@ -16,10 +14,9 @@
         android:fontFamily="@font/ml"
         android:textSize="18sp"
         android:id="@+id/title"
-        android:text="Escaneja el codi QR del museu fent click a la següent imatge"
+        android:text="@string/qr_explain"
         android:textAlignment="center"
-        android:layout_marginBottom="30dp"
-        />
+        android:layout_marginBottom="30dp" />
 
     <Button
         android:id="@+id/btn_scan"
@@ -29,7 +26,6 @@
         android:layout_marginLeft="20dp"
         android:background="@drawable/qrscann"
         android:textSize="16sp" />
-
 
     <TextView
         android:id="@+id/result_text"
