--- a/app/src/main/res/layout/activity_avalua.xml
+++ b/app/src/main/res/layout/activity_avalua.xml
@@ -9,26 +9,27 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
 
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        <WebView
+            android:id="@+id/webview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
 
-    <Button
-        android:id="@+id/buttonFinish"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/colorSecundary"
-        android:background="@drawable/bgwhite"
-        android:textColor="#FFF"
-        android:text="@string/end"
-        android:textSize="24sp" />
-
+        <Button
+            android:id="@+id/buttonFinish"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="40dp"
+            android:backgroundTint="@color/colorSecundary"
+            android:background="@drawable/bgwhite"
+            android:textColor="#FFF"
+            android:text="@string/end"
+            android:textSize="24sp" />
 
     </RelativeLayout>
 
