--- a/app/src/main/res/layout/activity_crea.xml
+++ b/app/src/main/res/layout/activity_crea.xml
@@ -50,6 +50,7 @@
         android:text="@string/next"
         android:textColor="#FFF"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -57,7 +58,7 @@
         <GridView
             android:id="@+id/grid"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="300dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
@@ -71,15 +72,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/create_description" />
 
+        <ImageView
+            android:id="@+id/obra_escollida"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_marginBottom="40dp"
+            android:maxWidth="300dp"
+            android:background="@xml/textview_border"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 <com.google.android.material.navigation.NavigationView
-android:id="@+id/nav_view"
-android:layout_width="wrap_content"
-android:layout_height="match_parent"
-app:headerLayout="@layout/nav_header"
-app:menu="@menu/nav_menu"
-android:layout_gravity="start"
-android:fitsSystemWindows="true"/>
-    </androidx.drawerlayout.widget.DrawerLayout>
+    android:id="@+id/nav_view"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    app:headerLayout="@layout/nav_header"
+    app:menu="@menu/nav_menu"
+    android:layout_gravity="start"
+    android:fitsSystemWindows="true"/>
+</androidx.drawerlayout.widget.DrawerLayout>
